<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical">

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:gravity="center"
		android:orientation="horizontal">

		<NumberPicker
			android:id="@+id/date_picker_from"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_margin="10dp"
			android:textSize="20sp"
			android:text="@string/date_picker_between_dates"/>

		<NumberPicker
			android:id="@+id/date_picker_to"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"/>
	</LinearLayout>

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="bottom"
		style="@android:style/Holo.Light.ButtonBar.AlertDialog">

		<Button
			android:id="@+id/date_picker_okay"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			style="@android:style/Holo.Light.ButtonBar.AlertDialog"
			android:text="@string/okay"/>

		<Button
			android:id="@+id/date_picker_cancel"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			style="@android:style/Holo.Light.ButtonBar.AlertDialog"
			android:text="@string/cancel"/>
	</LinearLayout>

</LinearLayout>